# schellingCode

./: .gitignore  DESIGN.md  PROGRESS.md  pyproject.toml  tasks.yaml
configs/: default.yaml  demo.yaml
schellingchords/: __init__.py  agents.py  chord.py  chords.py  config.py  model.py  observables.py  run.py  runner.py  vocabulary.py
schellingchords/metrics/: __init__.py
tests/: conftest.py  gate_agent.py  gate_distance.py  gate_model.py  gate_observables.py  gate_run.py  gate_sonify.py  test_datacollector.py  test_desired_slot.py  test_golden.py  test_metric_registry.py  test_model.py  test_pitch_class_overlap.py  test_satisfaction.py  test_schedule.py  test_single_run.py  test_sweep_cli.py  test_trajectory_render.py  test_window_midi.py  test_window_observables.py
tests/golden/: __init__.py  test_golden_consistency.py
