[project]
name = "schellingchords"
version = "0.1.0"
description = "A Mesa agent-based model that sonifies Schelling segregation of chords"
requires-python = ">=3.10"
dependencies = [
    "mesa>=2.1.0",
    "pyyaml>=6.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
